# jzon

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
.github/workflows/: bench.yml  ci.yml  publish.yml
crates/jzon/: Cargo.toml  README.md
crates/jzon/benches/: bench_cmp.rs  bench_derive_dispatch.rs  bench_scanner.rs  bench_simd.rs
crates/jzon/src/: de.rs  error.rs  fixed.rs  lib.rs  scanner.rs  ser.rs  simd.rs  simd_arch.rs  stats.rs
crates/jzon/src/ser/: sink.rs
crates/jzon/tests/: integration.rs  json_spec.rs  serde_compat.rs
crates/jzon_compat/: Cargo.toml  README.md
crates/jzon_compat/src/: lib.rs
crates/jzon_derive/: Cargo.toml  README.md
crates/jzon_derive/src/: attrs.rs  de.rs  lib.rs  ser.rs
crates/jzon_serde/: Cargo.toml  README.md
crates/jzon_serde/src/: lib.rs
